--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -178,6 +178,32 @@ jobs:
             Write-Host "✅ User Matrix sudah ada."
           }
 
+      - name: Simulate RDP login for user Matrix
+        shell: pwsh
+        run: |
+          Write-Host "👤 Simulating RDP login for user Matrix..."
+          Write-Host "Creating local session via tscon..."
+
+          # Coba cari session aktif milik user Matrix
+          $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
+          if (-not $sessionLine) {
+            Write-Host "⚠️ Tidak ditemukan session Matrix, membuat dummy session..."
+            cmd /c "runas /user:Matrix cmd.exe /c exit"
+            Start-Sleep -Seconds 3
+            $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
+          }
+
+          if (-not $sessionLine) {
+            Write-Host "❌ Gagal menemukan session Matrix setelah dicoba."
+            exit 0
+          }
+
+          $sessionId = ($sessionLine -split "\s+")[2]
+          Write-Host "📟 Session ID Matrix: $sessionId"
+          tscon $sessionId /dest:console
+          Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
+
+
 
       - name: Simulate RDP login for user Matrix
         shell: pwsh
