--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -261,7 +261,24 @@ jobs:
       
           Write-Host "✅ Semua script Matrix sudah dijalankan lewat scheduled task."
 
+      - name: Set wallpaper for Matrix user
+        shell: pwsh
+        run: |
+          $wallpaper = "D:\a\testw\testw\windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg"
+          Write-Host "🖼️ Setting wallpaper to $wallpaper ..."
+          
+          # Set wallpaper untuk semua user (termasuk Matrix)
+          Set-ItemProperty -path "HKCU:\Control Panel\Desktop\" -name wallpaper -value $wallpaper
+          RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters
 
+          # Pastikan juga di HKU untuk user Matrix (kalau Matrix belum login)
+          $sid = (New-Object System.Security.Principal.NTAccount("Matrix")).Translate([System.Security.Principal.SecurityIdentifier]).Value
+          $regPath = "Registry::HKEY_USERS\$sid\Control Panel\Desktop"
+          if (-not (Test-Path $regPath)) {
+            New-Item -Path $regPath -Force | Out-Null
+          }
+          Set-ItemProperty -Path $regPath -Name wallpaper -Value $wallpaper
+          Write-Host "✅ Wallpaper applied to user Matrix"
 
       - name: Set Timezone to Asia/Jakarta
         shell: pwsh
