--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -205,25 +205,21 @@ jobs:
           Write-Host "📟 Session ID Matrix: $sessionId"
           tscon $sessionId /dest:console
           Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
-
-      - name: Set wallpaper for Matrix user
+          
+      - name: Set default wallpaper for all users
         shell: pwsh
         run: |
           $wallpaper = "D:\a\testw\testw\windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg"
-          Write-Host "🖼️ Setting wallpaper to $wallpaper ..."
-          
-          # Set wallpaper untuk semua user (termasuk Matrix)
-          Set-ItemProperty -path "HKCU:\Control Panel\Desktop\" -name wallpaper -value $wallpaper
+          Write-Host "🖼️ Setting default wallpaper for all users to $wallpaper ..."
+
+          # Set wallpaper for .DEFAULT user hive (digunakan oleh semua user baru)
+          & reg add "HKU\.DEFAULT\Control Panel\Desktop" /v Wallpaper /t REG_SZ /d "$wallpaper" /f
+
+          # Apply the wallpaper setting
           RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters
 
-          # Pastikan juga di HKU untuk user Matrix (kalau Matrix belum login)
-          $sid = (New-Object System.Security.Principal.NTAccount("Matrix")).Translate([System.Security.Principal.SecurityIdentifier]).Value
-          $regPath = "Registry::HKEY_USERS\$sid\Control Panel\Desktop"
-          if (-not (Test-Path $regPath)) {
-            New-Item -Path $regPath -Force | Out-Null
-          }
-          Set-ItemProperty -Path $regPath -Name wallpaper -Value $wallpaper
-          Write-Host "✅ Wallpaper applied to user Matrix"
+          Write-Host "✅ Default wallpaper applied successfully."
+
 
       - name: Run PowerShell scripts as Matrix user
         shell: pwsh
