--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -131,22 +131,16 @@ jobs:
       - name: Setup Auto Wallpaper on RDP Login
         shell: pwsh
         run: |
+          # Buat folder untuk script
           New-Item -ItemType Directory -Path C:\Scripts -Force | Out-Null
 
-          # Tulis script baris demi baris biar YAML gak error
+          # Tuliskan script PowerShell baris demi baris agar YAML tidak error
           Set-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '$ErrorActionPreference = "Stop"'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value 'try {'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    $artifactUrl = "https://4kwallpapers.com/images/wallpapers/windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg"'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    $themeDir    = "C:\Scripts\"'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    $localPath   = Join-Path $themeDir "EnigMano.jpg"'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    New-Item -Path $themeDir -ItemType Directory -Force | Out-Null'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value ''
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value ''
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value ''
+          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    $localPath = "D:\a\testw\testw\windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg"'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    Add-Type @"'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '        using System.Runtime.InteropServices;'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '        public class EnigManoVisual {'
+          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '        public class WallpaperSetter {'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '            [DllImport("user32.dll", SetLastError = true)]'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '            public static extern bool SystemParametersInfo(int uAction, int uParam, string lpvParam, int fuWinIni);'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '        }'
@@ -155,14 +149,14 @@ jobs:
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    Set-ItemProperty -Path "HKCU:\Control Panel\Desktop" -Name Wallpaper -Value $localPath'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    Set-ItemProperty -Path "HKCU:\Control Panel\Desktop" -Name WallpaperStyle -Value 10'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    Set-ItemProperty -Path "HKCU:\Control Panel\Desktop" -Name TileWallpaper -Value 0'
-          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    [EnigManoVisual]::SystemParametersInfo(0x0014, 0, $localPath, 0x0001 -bor 0x0002) | Out-Null'
+          Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    [WallpaperSetter]::SystemParametersInfo(0x0014, 0, $localPath, 0x0001 -bor 0x0002) | Out-Null'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '}'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value 'catch {'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    Write-Error "Wallpaper setup failed: $_"'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '    exit 1'
           Add-Content -Path C:\Scripts\SetWallpaper.ps1 -Value '}'
 
-          # Register Scheduled Task
+          # Daftarkan Scheduled Task agar berjalan saat LogOn user "Matrix"
           $Action  = New-ScheduledTaskAction -Execute "powershell.exe" -Argument "-ExecutionPolicy Bypass -File C:\Scripts\SetWallpaper.ps1"
           $Trigger = New-ScheduledTaskTrigger -AtLogOn
           Register-ScheduledTask -Action $Action -Trigger $Trigger -TaskName "SetWallpaper" -User "Matrix" -Force
@@ -203,26 +197,48 @@ jobs:
           tscon $sessionId /dest:console
           Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
 
+      - name: Run PowerShell scripts as Matrix user
+        shell: pwsh
+        run: |
+          $pw = "Matrix#1234"
+      
+          function Run-TaskAsMatrix($taskName, $actionCmd) {
+            schtasks /Delete /TN $taskName /F > $null 2>&1
+            $start = (Get-Date).AddMinutes(1).ToString("HH:mm")
+            Write-Host "⏳ Creating scheduled task '$taskName' for Matrix..."
+            cmd /c "schtasks /Create /TN `"$taskName`" /TR `"$actionCmd`" /SC ONCE /ST $start /RL HIGHEST /F /RU Matrix /RP `"$pw`""
+            Start-Sleep -Seconds 2
+            Write-Host "▶️ Starting scheduled task '$taskName'..."
+            cmd /c "schtasks /Run /TN `"$taskName`""
+      
+            # Tunggu hingga selesai
+            for ($i=0; $i -lt 60; $i++) {
+              Start-Sleep -Seconds 2
+              $info = schtasks /Query /TN $taskName /V /FO LIST 2>$null | Out-String
+              if ($info -match "Status:\s+Ready" -or $info -match "Status:\s+Unknown" -or $info -match "Status:\s+Could not") {
+                break
+              }
+            }
+      
+            Write-Host "🧹 Deleting scheduled task '$taskName'..."
+            schtasks /Delete /TN $taskName /F > $null 2>&1
+          }
+      
+          # Contoh script yang mau dijalankan oleh user Matrix
+          $script1 = 'powershell.exe -ExecutionPolicy Bypass -File "C:\Scripts\ApplyDarkTheme.ps1"'
+          $script2 = 'powershell.exe -ExecutionPolicy Bypass -File "C:\Scripts\SetWallpaper.ps1"'
+      
+          Run-TaskAsMatrix -taskName "Matrix_ApplyDarkTheme" -actionCmd $script1
+          Run-TaskAsMatrix -taskName "Matrix_SetWallpaper" -actionCmd $script2
+      
+          Write-Host "✅ Semua script Matrix sudah dijalankan lewat scheduled task."
+
 
 
       - name: Set Timezone to Asia/Jakarta
         shell: pwsh
         run: |
           tzutil /s "SE Asia Standard Time"
-
-      - name: Set default wallpaper for all users
-        shell: pwsh
-        run: |
-          $wallpaper = "D:\a\testw\testw\windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg"
-          Write-Host "🖼️ Setting default wallpaper for all users to $wallpaper ..."
-
-          # Set wallpaper for .DEFAULT user hive (digunakan oleh semua user baru)
-          & reg add "HKU\.DEFAULT\Control Panel\Desktop" /v Wallpaper /t REG_SZ /d "$wallpaper" /f
-
-          # Apply the wallpaper setting
-          RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters
-
-          Write-Host "✅ Default wallpaper applied successfully."
 
       - name: Keep session alive
         run: |
