--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -216,11 +216,10 @@ jobs:
           $script1 = 'powershell.exe -ExecutionPolicy Bypass -File "C:\Scripts\ApplyDarkTheme.ps1"'
           $script2 = 'powershell.exe -ExecutionPolicy Bypass -File "C:\Scripts\SetWallpaper.ps1"'
       
-          Run-TaskAsMatrix -taskName "Matrix_ApplyDarkTheme" -actionCmd $script1
+          #Run-TaskAsMatrix -taskName "Matrix_ApplyDarkTheme" -actionCmd $script1
           Run-TaskAsMatrix -taskName "Matrix_SetWallpaper" -actionCmd $script2
       
           Write-Host "✅ Semua script Matrix sudah dijalankan lewat scheduled task."
-
 
 
       - name: Set Timezone to Asia/Jakarta
