--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -112,7 +112,7 @@ jobs:
           
           # Daftarkan Scheduled Task untuk user Matrix
           $Action = New-ScheduledTaskAction -Execute "powershell.exe" -Argument "-ExecutionPolicy Bypass -File C:\Scripts\ApplyDarkTheme.ps1"
-          $Trigger = New-ScheduledTaskTrigger -AtLogOn
+          $Trigger = New-ScheduledTaskTrigger -AtStartup
           Register-ScheduledTask -Action $Action -Trigger $Trigger -TaskName "ApplyDarkTheme" -User "Matrix" -Force
 
 
@@ -146,7 +146,7 @@ jobs:
 
           # Daftarkan Scheduled Task agar berjalan saat LogOn user "Matrix"
           $Action  = New-ScheduledTaskAction -Execute "powershell.exe" -Argument "-ExecutionPolicy Bypass -File C:\Scripts\SetWallpaper.ps1"
-          $Trigger = New-ScheduledTaskTrigger -AtLogOn
+          $Trigger = New-ScheduledTaskTrigger -AtStartup
           Register-ScheduledTask -Action $Action -Trigger $Trigger -TaskName "SetWallpaper" -User "Matrix" -Force
 
       - name: Ensure local user Matrix exists
