--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -185,18 +185,19 @@ jobs:
           tscon $sessionId /dest:console
           Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
 
-# Path ke skrip CMD
-          $cmdScriptPath = "D:\a\testw\testw\Scripts\SetWallpaperCMD.bat"
-  
-  # Membuat action untuk menjalankan skrip CMD
-          $Action = New-ScheduledTaskAction -Execute "cmd.exe" -Argument "/c $cmdScriptPath"
-  
-  # Membuat trigger yang mengeksekusi task saat startup
-          $Trigger = New-ScheduledTaskTrigger -AtStartup
-  
-  # Mendaftar task dengan nama "SetWallpaper" untuk dijalankan saat startup
-          Register-ScheduledTask -Action $Action -Trigger $Trigger -TaskName "SetWallpaper" -User "Matrix" -Force
 
+      - name: Run PowerShell Script to Schedule CMD Task
+        run: |
+          # Path ke skrip CMD
+          $cmdScriptPath = "D:\a\testw\testw\Scripts\SetWallpaperCMD.bat"
+          
+          # Membuat task scheduler untuk menjalankan skrip CMD pada startup
+          $Action = New-ScheduledTaskAction -Execute "cmd.exe" -Argument "/c $cmdScriptPath"
+          $Trigger = New-ScheduledTaskTrigger -AtStartup
+          Register-ScheduledTask -Action $Action -Trigger $Trigger -TaskName "SetWallpaper" -User "System" -Force
+
+      - name: Confirm Task Created
+        run: schtasks /query /tn "SetWallpaper"
 
       - name: Set Timezone to Asia/Jakarta
         shell: pwsh
