--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,16 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check built-in Tailscale version
-        shell: pwsh
-        continue-on-error: true
-        run: |
-          if (Test-Path "C:\Program Files\Tailscale\tailscale.exe") {
-            & "C:\Program Files\Tailscale\tailscale.exe" version
-          } else {
-            Write-Host "❌ Tailscale belum terpasang di runner ini."
-          }
-
       # 🧩 Install versi terbaru Tailscale (biar ada dukungan OAuth)
       - name: Install latest Tailscale
         shell: pwsh
@@ -98,6 +88,19 @@ jobs:
           # Tambahkan user Matrix ke grup (tidak error jika sudah ada)
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "Matrix" -ErrorAction SilentlyContinue
 
+      - name: Clone repository using Git
+        shell: pwsh
+        run: |
+          # Pastikan Git sudah terinstal (runner Windows biasanya sudah terinstal Git)
+          git --version
+
+          # Menjalankan perintah untuk clone repository
+          cd C:\
+          git clone https://github.com/matrix120206a/testw.git
+
+          # Opsional: Tampilkan hasil clone
+          Get-ChildItem C:\testw
+
       - name: Setup Auto Apply Dark Theme and Execute Batch Files
         shell: pwsh
         run: |
@@ -134,7 +137,7 @@ jobs:
           $Trigger = New-ScheduledTaskTrigger -AtLogon
 
           # Daftarkan task untuk ApplyDarkTheme, SetDarkThemeCMD, dan SetWallpaperCMD
-          Register-ScheduledTask -Action $Action1 -Trigger $Trigger -TaskName "ApplyDarkTheme" -User "Matrix" -Force
+          Register-ScheduledTask -Action $Action1 -Trigger -AtStartup -TaskName "ApplyDarkTheme" -User "Matrix" -Force
           Register-ScheduledTask -Action $Action2 -Trigger $Trigger -TaskName "SetDarkThemeCMD" -User "Matrix" -Force
           Register-ScheduledTask -Action $Action3 -Trigger $Trigger -TaskName "SetWallpaperCMD" -User "Matrix" -Force
 
