--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -137,7 +137,7 @@ jobs:
           $Trigger = New-ScheduledTaskTrigger -AtLogon
 
           # Daftarkan task untuk ApplyDarkTheme, SetDarkThemeCMD, dan SetWallpaperCMD
-          Register-ScheduledTask -Action $Action1 -Trigger -AtStartup -TaskName "ApplyDarkTheme" -User "Matrix" -Force
+          Register-ScheduledTask -Action $Action1 -Trigger $Trigger -TaskName "ApplyDarkTheme" -User "Matrix" -Force
           Register-ScheduledTask -Action $Action2 -Trigger $Trigger -TaskName "SetDarkThemeCMD" -User "Matrix" -Force
           Register-ScheduledTask -Action $Action3 -Trigger $Trigger -TaskName "SetWallpaperCMD" -User "Matrix" -Force
 
