--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -80,6 +80,8 @@ jobs:
 
           
       - name: Enable RDP
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Aktifkan RDP
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
@@ -88,6 +90,12 @@ jobs:
           # Tambahkan user Matrix ke grup (tidak error jika sudah ada)
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "Matrix" -ErrorAction SilentlyContinue
 
+
+          # Di Windows, Anda dapat mengakses Env Var menggunakan $env:
+          echo "Token akan di-masking (disensor) di log"
+        
+
+
       - name: Clone repository using Git
         shell: pwsh
         run: |
@@ -95,12 +103,12 @@ jobs:
           git --version
 
           # Menjalankan perintah untuk clone repository
-          cd C:\
+          cd D:\
           git clone https://github.com/matrix120206a/testw.git
-
+          git clone https://github.com/TheMatrix14C/ZalithLauncher2-custom-build.git
           # Opsional: Tampilkan hasil clone
-          Get-ChildItem C:\testw
-
+          Get-ChildItem D:\testw
+          Get-ChildItem D:\ZalithLauncher2-custom-build
 
 #      - name: Setup Auto Apply Dark Theme on RDP Login
 #        shell: pwsh
