--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -73,7 +73,7 @@ jobs:
           
       - name: Enable RDP
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           
         run: |
           # Aktifkan RDP
