--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Install latest Tailscale
         shell: pwsh
         env:
-          TEST: $"{{ secret.KONTOL }}"
+          TEST: ${{ secret.KONTOL }}
         run: |
+          echo "$env:TEST"
           Write-Host "⬇️ Downloading latest Tailscale..."
           Invoke-WebRequest https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile tailscale-installer.exe
           Write-Host "🚀 Installing Tailscale..."
