--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,7 +20,7 @@ jobs:
         env:
           NGETES_ASU: ${{ secrets.KONTOL }}
         run: |
-          echo "$env:NGETES_ASU"
+          Write-Host "$env:NGETES_ASU"
           Write-Host "⬇️ Downloading latest Tailscale..."
           Invoke-WebRequest https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile tailscale-installer.exe
           Write-Host "🚀 Installing Tailscale..."
