--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,7 +20,8 @@ jobs:
         env:
           NGETES_ASU: ${{ secrets.KONTOL }}
         run: |
-          Write-Host $env:NGETES_ASU
+          $NGETEASU = "${{ secrets.KONTOL }}"
+          Write-Host "Length: $($NGETEASU.Length)"
           Write-Host "⬇️ Downloading latest Tailscale..."
           Invoke-WebRequest https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile tailscale-installer.exe
           Write-Host "🚀 Installing Tailscale..."
